--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.12.0",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "react": "19.1.0",
@@ -27,6 +28,7 @@
     "eslint-config-next": "15.4.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
