--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.12.0",
+    "axios": "^1.11.0",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "react": "19.1.0",
