--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "@prisma/client": "6.12.0",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.11.0",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
-    "resend": "^4.7.0",
     "valibot": "^1.1.0",
     "zustand": "^5.0.6"
   },
